--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="/dist/bundle.css" />
+    <link rel="stylesheet" href="/bundle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/dist/bundle.js"></script>
+    <script type="module" src="/bundle.js"></script>
   </body>
 </html>
